lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_string_len/buffer_append_string_len3/buffer_append_string_len3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_string_len/buffer_append_string_len3/buffer_append_string_len3.c:24:43: error: use of undeclared identifier 'dyn_size'
    const size_t sz__len = (const size_t) dyn_size[-1];
                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
